--- a/src/components/useTransition/ImageFade/styles.module.css
+++ b/src/components/useTransition/ImageFade/styles.module.css
@@ -1,8 +1,8 @@
 .bg {
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 400px;
+    height: 400px;
     background-size: cover;
     background-position: center;
     will-change: opacity;
