--- a/src/components/useTransition/ListOrdering/styles.module.css
+++ b/src/components/useTransition/ListOrdering/styles.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 65vw;
     max-width: 100%;
-    height: 100%;
+    height: 100px;
     margin: 0 auto;
   }
   
@@ -16,12 +16,12 @@
     position: relative;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100px;
     overflow: hidden;
     text-transform: uppercase;
     font-size: 10px;
     line-height: 10px;
-    padding: 15px;
+    padding: 5px;
   }
   
   .details {
